# TextReg

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_textreg.py
textreg/: __init__.py  optimizer.py  pipeline.py  prompts.py  purification.py  rulebank.py
